[tool.poetry]
name = "homework-17-poetry"
version = "0.1.0"
description = ""
authors = ["MarySukhorukova <57411226+MarySukhorukova@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "homework_17_poetry"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.1"
selene = "^2.0.0b16"

[tool.poetry.dev-dependencies]
pylint = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"